# metroliza

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOOGLE_SHEETS_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  VersionDate.py  build_nuitka.ps1  build_windows_exe.bat  build_windows_exe.ps1  diagnose_windows_ocr.bat  diagnose_windows_ocr.ps1  gui_qt_test.py  main.py  metroliza.py  metroliza_onefile.spec  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-ocr.txt  requirements.txt  setup_windows_runtime.bat  setup_windows_runtime.ps1  version_date.py
.github/: pull_request_template.md
benchmarks/: perf_baseline_snapshot.json
docs/: README.md  ci-policy.md  contrast_hotspots_checklist.md  documentation_policy.md  google_conversion_smoke_runbook.md  module_naming_migration.md  native_build_distribution.md  perf_baseline.md  perf_baseline_snapshot.json
modules/: AboutWindow.py  Base64EncodedFiles.py  CMMReportParser.py  CSVSummaryDialog.py  CustomLogger.py  DataGrouping.py  ExportDataThread.py  ExportDialog.py  FilterDialog.py  LicenseKeyManager.py  MainWindow.py  ModifyDB.py  ParseReportsThread.py  ParsingDialog.py  PyQT_GUI.py  ReleaseNotesDialog.py  about_window.py  backend_diagnostics.py  base64_encoded_files.py  base_report_parser.py  bom_manager.py  characteristic_alias_service.py  characteristic_mapping_dialog.py  chart_render_service.py  chart_render_spec.py  (+100 more)
modules/native/distribution_fit_ad/: Cargo.toml  README.md
modules/native/distribution_fit_ad/src/: lib.rs
(+316 files in other folders)
