[package]
name = "metroliza_distribution_fit_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_metroliza_distribution_fit_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"
rayon = "1.10"
